# light-trend-app

./: DESIGN_SPEC.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  PlatformPie.tsx  ScoreGauge.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  platforms.rs
