[package]
name = "light-trend-app"
version = "1.0.0"
description = "Trending topics dashboard as a macOS menu bar app"
authors = ["meco"]
edition = "2021"

[lib]
name = "light_trend_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
quick-xml = "0.37"
futures = "0.3"
